Removed more warnings.